--- a/here.now.b/Base.lproj/Main.storyboard
+++ b/here.now.b/Base.lproj/Main.storyboard
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="BebasNeue Light.ttf">
+            <string>BebasNeueLight</string>
+            <string>BebasNeueLight</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="here_now_b" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +23,77 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image2.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RrR-Pi-d2x">
+                                <rect key="frame" x="-6" y="-9" width="606" height="616"/>
+                            </imageView>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LhV-Qz-oHQ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="177-b4-Ztx">
+                                        <rect key="frame" x="222" y="206" width="157" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="157" id="6i7-Wm-Bq8"/>
+                                            <constraint firstAttribute="height" constant="44" id="DIL-D3-JWa"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="BebasNeueLight" family="Bebas Neue" pointSize="26"/>
+                                        <state key="normal" title="Be Here Now">
+                                            <color key="titleColor" red="0.14641302595641623" green="0.095660214391031645" blue="0.32181186868686873" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttenPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MKm-91-jbp"/>
+                                            <action selector="button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="khF-6N-dAx"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU WILL START RECEIVING NOTIFICATIONS AT RANDOM INTERVALS
+
+CLICK THE BUTTON AGAIN TO DISABLE RECEIVING NOTIFICATIONS" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmH-jt-Mcd">
+                                        <rect key="frame" x="174" y="243" width="253" height="113"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="253" id="PCP-O0-gyc"/>
+                                            <constraint firstAttribute="height" constant="113" id="b7S-y8-3Bm"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="BebasNeueLight" family="Bebas Neue" pointSize="22"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1000010445" green="0.068316550860000005" blue="0.2491319444" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="177-b4-Ztx" secondAttribute="bottom" constant="350" id="CX1-kV-AfN"/>
+                                    <constraint firstAttribute="centerY" secondItem="FmH-jt-Mcd" secondAttribute="centerY" constant="0.5" id="Hux-Aw-6Uh"/>
+                                    <constraint firstAttribute="centerX" secondItem="FmH-jt-Mcd" secondAttribute="centerX" constant="-0.5" id="au6-qs-BNv"/>
+                                    <constraint firstAttribute="centerX" secondItem="177-b4-Ztx" secondAttribute="centerX" constant="-0.5" id="o0t-N4-nxL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0FK-Zf-lY6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LhV-Qz-oHQ" secondAttribute="bottom" id="1TH-pC-r2r"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="RrR-Pi-d2x" secondAttribute="bottom" constant="-7" id="4qV-7F-KsJ"/>
+                            <constraint firstAttribute="trailing" secondItem="LhV-Qz-oHQ" secondAttribute="trailing" id="ABH-Zs-Lm3"/>
+                            <constraint firstItem="RrR-Pi-d2x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-22" id="BWI-ke-eoa"/>
+                            <constraint firstItem="RrR-Pi-d2x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-9" id="DC4-AU-kIc"/>
+                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="fc8-8z-xJK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RrR-Pi-d2x" secondAttribute="trailing" constant="-16" id="kKq-U6-fOx"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="gFJ-40-hFm"/>
+                    <connections>
+                        <outlet property="bottomConstraint" destination="CX1-kV-AfN" id="UbU-6e-Jem"/>
+                        <outlet property="button" destination="177-b4-Ztx" id="0Ub-gq-rk5"/>
+                        <outlet property="text" destination="FmH-jt-Mcd" id="DHq-ay-HWT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="383"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image2" width="950" height="650"/>
+    </resources>
 </document>
