--- a/here.now.b/Base.lproj/Main.storyboard
+++ b/here.now.b/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="BebasNeue Light.ttf">
@@ -24,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image2.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RrR-Pi-d2x">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image2.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RrR-Pi-d2x">
                                 <rect key="frame" x="-6" y="-9" width="606" height="616"/>
                             </imageView>
                             <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LhV-Qz-oHQ">
@@ -47,9 +46,7 @@
                                             <action selector="button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="khF-6N-dAx"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU WILL START RECEIVING NOTIFICATIONS AT RANDOM INTERVALS
-
-CLICK THE BUTTON AGAIN TO DISABLE RECEIVING NOTIFICATIONS" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmH-jt-Mcd">
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU WILL START RECEIVING NOTIFICATIONS AT RANDOM INTERVALS  CLICK THE BUTTON AGAIN TO DISABLE RECEIVING NOTIFICATIONS" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmH-jt-Mcd">
                                         <rect key="frame" x="174" y="243" width="253" height="113"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="253" id="PCP-O0-gyc"/>
@@ -71,14 +68,10 @@ CLICK THE BUTTON AGAIN TO DISABLE RECEIVING NOTIFICATIONS" textAlignment="center
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0FK-Zf-lY6"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LhV-Qz-oHQ" secondAttribute="bottom" id="1TH-pC-r2r"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="RrR-Pi-d2x" secondAttribute="bottom" constant="-7" id="4qV-7F-KsJ"/>
-                            <constraint firstAttribute="trailing" secondItem="LhV-Qz-oHQ" secondAttribute="trailing" id="ABH-Zs-Lm3"/>
-                            <constraint firstItem="RrR-Pi-d2x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-22" id="BWI-ke-eoa"/>
-                            <constraint firstItem="RrR-Pi-d2x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-9" id="DC4-AU-kIc"/>
-                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="fc8-8z-xJK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="RrR-Pi-d2x" secondAttribute="trailing" constant="-16" id="kKq-U6-fOx"/>
+                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5N4-5g-f4W"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LhV-Qz-oHQ" secondAttribute="bottom" id="AAj-eS-2en"/>
+                            <constraint firstAttribute="trailing" secondItem="LhV-Qz-oHQ" secondAttribute="trailing" id="Vxy-id-eyz"/>
+                            <constraint firstItem="LhV-Qz-oHQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wNp-Ul-qP3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gFJ-40-hFm"/>
@@ -94,6 +87,6 @@ CLICK THE BUTTON AGAIN TO DISABLE RECEIVING NOTIFICATIONS" textAlignment="center
         </scene>
     </scenes>
     <resources>
-        <image name="image2" width="950" height="650"/>
+        <image name="image2.jpg" width="950" height="650"/>
     </resources>
 </document>
